--- a/package.json
+++ b/package.json
@@ -60,6 +60,9 @@
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
         "tw-animate-css": "^1.4.0",
+        "gsap": "^3.12.2",
+        "locomotive-scroll": "^4.1.3",
+        "scrollreveal": "^4.0.9",
         "typescript": "^5.7.2",
         "vite": "^7.0.4"
     },
